--- a/src/laporan/report_keuangan.jrxml
+++ b/src/laporan/report_keuangan.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="383d0601-c62d-4865-b5c6-584c58f4e621">
-	<property name="ireport.zoom" value="5.5599173134924325"/>
-	<property name="ireport.x" value="377"/>
-	<property name="ireport.y" value="1343"/>
+	<property name="ireport.zoom" value="1.2100000000000433"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="112"/>
 	<style name="Title" forecolor="#FFFFFF" fontName="Times New Roman" fontSize="50" isBold="false" pdfFontName="Times-Bold"/>
 	<style name="SubTitle" forecolor="#CCCCCC" fontName="Times New Roman" fontSize="18" isBold="false" pdfFontName="Times-Roman"/>
 	<style name="Column header" forecolor="#666666" fontName="Times New Roman" fontSize="14" isBold="true" pdfFontName="Times-Roman"/>
@@ -31,9 +31,9 @@
 	<field name="status" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="waktu" class="java.sql.Time">
-		<fieldDescription><![CDATA[]]></fieldDescription>
-	</field>
+	<variable name="nominal_uang_1" class="java.lang.Integer" calculation="Sum">
+		<variableExpression><![CDATA[$F{nominal_uang}]]></variableExpression>
+	</variable>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -185,9 +185,15 @@
 		</band>
 	</columnFooter>
 	<pageFooter>
-		<band height="28" splitType="Stretch"/>
+		<band height="98" splitType="Stretch"/>
 	</pageFooter>
 	<summary>
-		<band splitType="Stretch"/>
+		<band height="100" splitType="Stretch">
+			<textField>
+				<reportElement uuid="3bf530ed-2a61-4b87-b5d8-87647f8f76bf" x="357" y="32" width="100" height="20"/>
+				<textElement/>
+				<textFieldExpression><![CDATA[$V{nominal_uang_1}]]></textFieldExpression>
+			</textField>
+		</band>
 	</summary>
 </jasperReport>
