--- a/src/bendahara/PetunjukFormKeuangan.form
+++ b/src/bendahara/PetunjukFormKeuangan.form
@@ -1567,7 +1567,7 @@
                       <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
                     <Property name="horizontalAlignment" type="int" value="2"/>
-                    <Property name="text" type="java.lang.String" value="1. Isikan Field Nominal Uang, Keterangan dan Status."/>
+                    <Property name="text" type="java.lang.String" value="1. Isikan Field Keterangan dan nominal uang masuk atau keluar."/>
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -1609,7 +1609,7 @@
                     <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                       <Image iconType="3" name="/iconOutline/icons8-back-48.png"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="Kembali Ke Form"/>
+                    <Property name="text" type="java.lang.String" value="Kembali Ke Dashboard"/>
                     <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
                       <Color id="Hand Cursor"/>
                     </Property>
@@ -1622,7 +1622,7 @@
                   </Events>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                      <AbsoluteConstraints x="20" y="0" width="240" height="70"/>
+                      <AbsoluteConstraints x="20" y="0" width="310" height="70"/>
                     </Constraint>
                   </Constraints>
                 </Component>
