--- a/src/laporan/PrintKeuanganKeluar.form
+++ b/src/laporan/PrintKeuanganKeluar.form
@@ -122,11 +122,11 @@
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="0"/>
-                <Property name="text" type="java.lang.String" value="Print Data Keuangan"/>
+                <Property name="text" type="java.lang.String" value="Print Data Keuangan Keluar"/>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="560" y="0" width="280" height="60"/>
+                  <AbsoluteConstraints x="560" y="0" width="340" height="60"/>
                 </Constraint>
               </Constraints>
             </Component>
