--- a/src/sekretaris/PetunjukFormKegiatan.form
+++ b/src/sekretaris/PetunjukFormKegiatan.form
@@ -133,7 +133,7 @@
                       <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
                     <Property name="horizontalAlignment" type="int" value="0"/>
-                    <Property name="text" type="java.lang.String" value="Petunjuk Mengoperasikan Form Keuangan"/>
+                    <Property name="text" type="java.lang.String" value="Petunjuk Mengoperasikan Form Kegiatan"/>
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
